--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.6",
     "path": "latest",
     "react": "^19",
     "react-day-picker": "9.8.0",
