--- a/package.json
+++ b/package.json
@@ -51,8 +51,10 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "8.5.1",
     "geist": "^1.3.1",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "jquery": "latest",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.6",
